--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -1181,14 +1181,16 @@
 		</menu>
 		<!-- LIBRARY FRAME -->
 		<menu name="CLibraryTree.Physical.Basic">
-			<item id="ID_LIBRARY_SHARED_FOLDER" text="_مشاركة"/>
+			<item id="ID_LIBRARY_EXPLORE" text="_تصفح"/>
 			<item id="ID_LIBRARY_REMOVE" text="_إزالة"/>
 			<separator/>
-			<item id="ID_SHELL_MENU" text="قائمة ال_قشرة"/>
+			<item id="ID_LIBRARY_SHARED_FOLDER" text="_مشاركة"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="مشارك_ة الملفات..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="إنشاء ملف torrent"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="إنشاء ملف torrent"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="قائمة ال_قشرة"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="_تصفح"/>
@@ -1200,7 +1202,7 @@
 			<item id="ID_LIBRARY_REBUILD" text="إع_ادة بناء"/>
 			<item id="ID_LIBRARY_FOLDERS" text="مشارك_ة الملفات..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="إنشاء ملف torrent"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="إنشاء ملف torrent"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="قائمة ال_قشرة"/>
 			<separator/>
