--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -1181,14 +1181,16 @@
 		</menu>
 		<!-- LIBRARY FRAME -->
 		<menu name="CLibraryTree.Physical.Basic">
-			<item id="ID_LIBRARY_SHARED_FOLDER" text="_Compartit"/>
+			<item id="ID_LIBRARY_EXPLORE" text="_Explora"/>
 			<item id="ID_LIBRARY_REMOVE" text="_Esborra"/>
 			<separator/>
-			<item id="ID_SHELL_MENU" text="S_hell menu"/>
+			<item id="ID_LIBRARY_SHARED_FOLDER" text="_Compartit"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="_Comparteix carpetes..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="Crea arxiu .torrent"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="Crea arxiu .torrent"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="_Explora"/>
@@ -1200,7 +1202,7 @@
 			<item id="ID_LIBRARY_REBUILD" text="Re_fés"/>
 			<item id="ID_LIBRARY_FOLDERS" text="_Comparteix carpetes..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="Crea arxiu .torrent"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="Crea arxiu .torrent"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 			<separator/>
