--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -1194,14 +1194,16 @@
 		</menu>
 		<!-- LIBRARY FRAME -->
 		<menu name="CLibraryTree.Physical.Basic">
-			<item id="ID_LIBRARY_SHARED_FOLDER" text="_Shared"/>
+			<item id="ID_LIBRARY_EXPLORE" text="_Explore"/>
 			<item id="ID_LIBRARY_REMOVE" text="_Remove"/>
 			<separator/>
-			<item id="ID_SHELL_MENU" text="S_hell menu"/>
+			<item id="ID_LIBRARY_SHARED_FOLDER" text="_Shared"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="Share _Files..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="Create ._torrent File"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="Create ._torrent File"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="_Explore"/>
@@ -1213,7 +1215,7 @@
 			<item id="ID_LIBRARY_REBUILD" text="Re_build"/>
 			<item id="ID_LIBRARY_FOLDERS" text="Share _Files..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="Create ._torrent File"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="Create ._torrent File"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 			<separator/>
