--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -1181,14 +1181,16 @@
 		</menu>
 		<!-- LIBRARY FRAME -->
 		<menu name="CLibraryTree.Physical.Basic">
-			<item id="ID_LIBRARY_SHARED_FOLDER" text="_Bendrintas"/>
+			<item id="ID_LIBRARY_EXPLORE" text="P_eržvelgti"/>
 			<item id="ID_LIBRARY_REMOVE" text="Š_alinti"/>
 			<separator/>
-			<item id="ID_SHELL_MENU" text="Aplinkos _meniu"/>
+			<item id="ID_LIBRARY_SHARED_FOLDER" text="_Bendrintas"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="_Bendrinti failus..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="Sukurti .torrent failą"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="Sukurti .torrent failą"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Aplinkos _meniu"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="P_eržvelgti"/>
@@ -1200,7 +1202,7 @@
 			<item id="ID_LIBRARY_REBUILD" text="Per_daryti"/>
 			<item id="ID_LIBRARY_FOLDERS" text="_Bendrinti failus..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="Sukurti .torrent failą"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="Sukurti .torrent failą"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="Aplinkos _meniu"/>
 			<separator/>
