--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -1181,14 +1181,16 @@
 		</menu>
 		<!-- LIBRARY FRAME -->
 		<menu name="CLibraryTree.Physical.Basic">
-			<item id="ID_LIBRARY_SHARED_FOLDER" text="_Общий доступ"/>
+			<item id="ID_LIBRARY_EXPLORE" text="_Проводник"/>
 			<item id="ID_LIBRARY_REMOVE" text="_Удалить"/>
 			<separator/>
-			<item id="ID_SHELL_MENU" text="Меню Windows"/>
+			<item id="ID_LIBRARY_SHARED_FOLDER" text="_Общий доступ"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="Общий _доступ..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="_Создать .torrent файл"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="_Создать .torrent файл"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Меню Windows"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="_Проводник"/>
@@ -1200,7 +1202,7 @@
 			<item id="ID_LIBRARY_REBUILD" text="_Перестройка"/>
 			<item id="ID_LIBRARY_FOLDERS" text="Общий _доступ..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="_Создать .torrent файл"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="_Создать .torrent файл"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="Меню Windows"/>
 			<separator/>
