--- a/Languages/default-sr.xml
+++ b/Languages/default-sr.xml
@@ -1181,14 +1181,16 @@
 		</menu>
 		<!-- LIBRARY FRAME -->
 		<menu name="CLibraryTree.Physical.Basic">
-			<item id="ID_LIBRARY_SHARED_FOLDER" text="Deljeno"/>
+			<item id="ID_LIBRARY_EXPLORE" text="Istraži"/>
 			<item id="ID_LIBRARY_REMOVE" text="Ukloni"/>
 			<separator/>
-			<item id="ID_SHELL_MENU" text="S_hell menu"/>
+			<item id="ID_LIBRARY_SHARED_FOLDER" text="Deljeno"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDERS" text="Дели _Фајлове ..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="Napravi .torrent Datoteku"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="Napravi .torrent Datoteku"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 		</menu>
 		<menu name="CLibraryTree.Physical">
 			<item id="ID_LIBRARY_EXPLORE" text="Istraži"/>
@@ -1200,7 +1202,7 @@
 			<item id="ID_LIBRARY_REBUILD" text="O_bnovi"/>
 			<item id="ID_LIBRARY_FOLDERS" text="Дели _Фајлове ..."/>
 			<separator/>
-			<item id="ID_LIBRARY_CREATETORRENT" text="Napravi .torrent Datoteku"/>
+			<item id="ID_LIBRARY_FOLDER_CREATETORRENT" text="Napravi .torrent Datoteku"/>
 			<separator/>
 			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 			<separator/>
